@@ -1,3 +1,9 @@
+Mon Feb 23 22:17:50 GMT 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (locale_macros, display): Only load per-locale groff
+	  macros if preconv is available, since those macros may change the
+	  assumed input encoding.
+
 Mon Feb 23 22:11:56 GMT 2009  Colin Watson  <cjwatson@debian.org>
 
 	* docs/NEWS: Update.
